--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
   name: typesense
   env: docker
   repo: https://github.com/hmbrg/typesense-on-render.git
-  plan: free
+  plan: starter
   healthCheckPath: /health
   disk:
     name: typesense-data
